[FIX] helpdesk: Show Helpdesk overview tickets on mobile
A bug was introduced in the following PR: https://github.com/odoo/enterprise/pull/16020
where we tried to fix the display when we use "Group By" in
the Helpdesk Overview.

But on mobile, users weren't able to click on "Tickets" From the
dashboard...

To fix this we now use the right property: "sticky".

opw-2479945

closes odoo/enterprise#17111

closes odoo/enterprise#17173

X-original-commit: b1850b82f5ddc784cdcbc18d0ee91cb4f4a019cf

--- a/helpdesk/static/src/scss/helpdesk.scss
+++ b/helpdesk/static/src/scss/helpdesk.scss
@@ -1,8 +1,6 @@
 .o_kanban_view.o_kanban_dashboard.o_helpdesk_kanban {
     $helpdesk-record-width: 420px;
 
-    padding-top: 180px;
-    overflow: auto;
     .o_kanban_group {
         width: $helpdesk-record-width + 2*$o-kanban-group-padding;
     }
@@ -15,14 +13,15 @@
 .o_helpdesk_dashboard {
     $sale-table-spacing: 10px;
 
-    position: fixed;
+    @include media-breakpoint-up(md) {
+        position: sticky;
+        top: 0;
+        z-index: 10;
+    }
+
     border: 8px solid #f9f9f9;
     border-bottom: 1px solid #CED4DA;
     background-color: $o-view-background-color;
-    z-index: 10;
-    width: 100%;
-    overflow-x: auto;
-    white-space: nowrap;
 
     .o_welcome_message {
         width: 100%;
